--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.4",
+    "@actions/glob": "^0.1.1",
     "@actions/io": "^1.0.2",
     "aws-sdk": "^2.0.0",
     "graceful-fs": "^4.2.4",
